--- a/Week3-project/html/leopard skin.html
+++ b/Week3-project/html/leopard skin.html
@@ -33,7 +33,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="bowl.html">Plant bowl</a></li>
               <li><a class="dropdown-item" href="seed.html">Agricultural seeds</a></li>
-              <li><a class="dropdown-item" href="#">Various indoor plants</a></li>
+              <li><a class="dropdown-item" href="proj.html">Various indoor plants</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
