--- a/Week3-project/proj.html
+++ b/Week3-project/proj.html
@@ -38,7 +38,7 @@
           </li>
           <li class="nav-item dropdown">
           </li>
-          <a class="navbar-brand" href="#">Policies and Terms</a>
+          <a class="navbar-brand" href="polic.html">Policies and Terms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -129,10 +129,15 @@
   <div class="card">
     <div class="card-body">
 
-     
+      <!-- Divider -->
+      <hr>
+       <!-- Divider -->
+       <hr>
+
     </div>
   </div>
   <!-- Card -->
+
   <div class="container">
     <div class="row">
       <hr class="w-100 clearfix d-md-right">
