--- a/Week3-project/details.html
+++ b/Week3-project/details.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tropical Store</title>
   <link href="css/proj.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -14,10 +16,10 @@
   </script>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="body">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="img/1.jpg" alt="" style="width:100px;height:90px;"></a>
+      <a class="navbar-brand" href="#"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,61 +28,68 @@
         <ul class="navbar-nav">
           <li class="nav-item">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" style="font-size: large; color: #fff;"
+              id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Shipping products to all cities
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="bowl.html">Plant bowl</a></li>
               <li><a class="dropdown-item" href="seed.html">Agricultural seeds</a></li>
-              <li><a class="dropdown-item" href="proj.html">Various indoor plants</a></li>
+              <li><a class="dropdown-item" href="index.html">Home</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
           </li>
-          <a class="navbar-brand" href="#">Policies and Terms</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="#">Contact with us</a>
+          <a class="navbar-brand" href="polic.html" style="font-size: large; margin: auto; color: #fff;"> Policies and
+            Terms</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </ul>
       </div>
+      <img src="img/1.jpg" alt="" style="width: 130px; height: 100px;">
+      <button type="button" class="btn " role="button"><a class="btn btn-success" href="login.html">Sign in</a></button>
     </div>
   </nav>
 
-   <!-- Card -->
-   <div class="card">
-    <div class="card-body">
 
-      <!-- Divider -->
-      <hr>
 
-    </div>
-  </div>
+
+
+  <!-- Divider -->
+  <hr>
+  <!-- Divider -->
+  <hr>
+
   <!-- Card -->
-  
+
   <div class="card" style="width: 50%; margin: auto; display: block; font-size: large; font-style: italic;">
-    <h2>Jacaranda tree seed.</h2>
-    <h3>10 S.R</h3>
-    
-    <br> <img src="img/11.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <figure>
-            <blockquote class="blockquote">
-                <h3>farming details</h3>
-              <p>A plant from the humid tropics and subtropics, where it is found at altitudes from 500 - 2400 meters. It grows best in regions where annual daytime temperatures are in the range of 20-34 ° C, but can withstand 10 - 38 ° C. Young growth does not tolerate frost, but older trees can sometimes withstand short-lived bottoms up to - 5 °C favors the average annual precipitation in the range 800 - 1400 mm.</p>
-            </blockquote>
-         </figure>
-    </div>
+
   </div>
+  <!-- Divider -->
+  <hr>
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center border-top">
+      <div class="row" style="width: 100%;">
+        <div class="col">
+          <span class="text-muted">© 2021 Company, Inc</span>
+        </div>
+        <div class="col" style="text-align: center;">
+          <h3>Contact with us</h3>
+        </div>
+        <div class="col" style="text-align: center;">
+          <ul class="">
+            <i class="fab fa-twitter-square"><a class="text-muted" href="#"></a></i>
+            <i class="fab fa-instagram"><a class="text-muted" href="#"></a></i>
+            <i class="fab fa-snapchat-ghost"><a class="text-muted" href="#"></a></i>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="./js/details.js"></script>
 </body>
+
 </html>
-
-
-
-
