--- a/Week3-project/index.html
+++ b/Week3-project/index.html
@@ -33,9 +33,9 @@
               Shipping products to all cities
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="details.html">Plant bowl</a></li>
+              <li><a class="dropdown-item" href="bowl.html">Plant bowl</a></li>
               <li><a class="dropdown-item" href="seed.html">Agricultural seeds</a></li>
-              <li><a class="dropdown-item" href="index.html">Home</a></li>
+              <li><a class="dropdown-item" href="index.html">Various indoor plants</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -52,6 +52,9 @@
       <button type="button" class="btn " role="button"><a class="btn btn-success" href="login.html">Sign in</a></button>
     </div>
   </nav>
+
+
+
   <!-- Card -->
   <div class="card">
     <div class="card-body">
@@ -62,29 +65,87 @@
     </div>
   </div>
   <!-- Card -->
+
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/2.jpg" class="d-block w-40" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <br>
+          <h5>Potts Marble Queen plant in a hanging pot.</h5>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/3.jpg" class="d-block w-40" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <br>
+          <h5>Vicks Robusta Mottled in a Ceramic Pot.</h5>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="img/4.jpg" class="d-block w-40" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <br>
+          <h5>The rib cage or (monstera) in a transparent plastic vase.</h5>
+
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!-- Card -->
+  <div class="card">
+    <div class="card-body">
+
+      <!-- Divider -->
+      <hr>
+      <!-- Divider -->
+      <hr>
+
+    </div>
+  </div>
+  <!-- Card -->
+
   <div class="container">
     <div class="row">
       <hr class="w-100 clearfix d-md-right">
       <div class="col-md-6">
         <div class="card">
-          <img src="img/8.jpg" class="card-img-top" alt="...">
+          <img src="img/2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Burlap bowl</h5>
+            <h5 class="card-title">Potts Marble Queen plant in a hanging pot</h5>
 
-            <a href="details.html"> <button type="button" id="Burlap" class="btn btn-outline-secondary">More..</button>
-            </a>
-          </div>
+          <a href="details.html"> <button type="button" id="potts" class="btn btn-outline-secondary">More..</button>    </a> 
+            
+          </div>                                      
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card">
-          <img src="img/7.jpg" class="card-img-top" alt="...">
+          <img src="img/3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Ceramic bowl</h5>
+            <h5 class="card-title">Vicks Robusta Mottled in a Ceramic Pot</h5>
 
-            <a href="details.html"> <button type="button" id="Ceramic" class="btn btn-outline-secondary">More..</button>
-            </a>
+            <a href="details.html"> <button type="button"  id="vicks" class="btn btn-outline-secondary">More..</button>   </a>
           </div>
         </div>
       </div>
@@ -92,12 +153,11 @@
     <div class="row">
       <div class="col-md-6">
         <div class="card">
-          <img src="img/10.jpg" class="card-img-top" alt="...">
+          <img src="img/4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Ceramic bowl</h5>
+            <h5 class="card-title">The rib cage or (monstera) in a transparent plastic vase</h5>
 
-            <a href="details.html"> <button type="button" id="Ceramic1"
-                class="btn btn-outline-secondary">More..</button> </a>
+            <a href="details.html"> <button type="button"  id="monstera" class="btn btn-outline-secondary">More..</button>   </a>  
           </div>
         </div>
       </div>
@@ -105,31 +165,31 @@
 
       <div class="col-md-6">
         <div class="card">
-          <img src="img/9.jpg" class="card-img-top" alt="...">
+          <img src="img/6.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Bamboo bowl</h5>
+            <h5 class="card-title">Leopard skin plant in self watering pot gray</h5>
 
-            <a href="details.html"> <button type="button" id="Bambo" class="btn btn-outline-secondary">More..</button>
-            </a>
+            <a href="details.html"> <button type="button" id="leopard" class="btn btn-outline-secondary">More..</button>   </a>  
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Divider -->
-  <hr>
-
-  <!-- Card -->
-  <div class="card">
-    <div class="card-body">
 
       <!-- Divider -->
       <hr>
 
+      <!-- Card -->
+      <div class="card">
+        <div class="card-body">
+
+          <!-- Divider -->
+          <hr>
+
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
   </div>
 
   <div class="container">
@@ -152,9 +212,9 @@
     </footer>
   </div>
 
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="./js/proj.js"></script>
-
 </body>
 
 </html>
