--- a/Week3-project/index.html
+++ b/Week3-project/index.html
@@ -49,7 +49,8 @@
         </ul>
       </div>
       <img src="img/1.jpg" alt="" style="width: 130px; height: 100px;">
-      <button type="button" class="btn " role="button"><a class="btn btn-success" href="login.html">Sign in</a></button>
+      <br>
+      <button class="btn"><a class="btn btn-success" href="login.html">Sign in</button></a>
     </div>
   </nav>
 
@@ -133,9 +134,12 @@
           <div class="card-body">
             <h5 class="card-title">Potts Marble Queen plant in a hanging pot</h5>
 
-          <a href="details.html"> <button type="button" id="potts" class="btn btn-outline-secondary">More..</button>    </a> 
-            
-          </div>                                      
+            <a href="details.html"> <button type="button" id="potts" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+            </a>
+
+          </div>
         </div>
       </div>
 
@@ -145,7 +149,10 @@
           <div class="card-body">
             <h5 class="card-title">Vicks Robusta Mottled in a Ceramic Pot</h5>
 
-            <a href="details.html"> <button type="button"  id="vicks" class="btn btn-outline-secondary">More..</button>   </a>
+            <a href="details.html"> <button type="button" id="vicks" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+</a>
           </div>
         </div>
       </div>
@@ -157,7 +164,10 @@
           <div class="card-body">
             <h5 class="card-title">The rib cage or (monstera) in a transparent plastic vase</h5>
 
-            <a href="details.html"> <button type="button"  id="monstera" class="btn btn-outline-secondary">More..</button>   </a>  
+            <a href="details.html"> <button type="button" id="monstera"
+                class="btn btn-outline-secondary">More..</button> </a>
+                <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+</a>
           </div>
         </div>
       </div>
@@ -169,7 +179,10 @@
           <div class="card-body">
             <h5 class="card-title">Leopard skin plant in self watering pot gray</h5>
 
-            <a href="details.html"> <button type="button" id="leopard" class="btn btn-outline-secondary">More..</button>   </a>  
+            <a href="details.html"> <button type="button" id="leopard" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+</a>
           </div>
         </div>
       </div>
@@ -177,19 +190,19 @@
   </div>
 
 
+  <!-- Divider -->
+  <hr>
+
+  <!-- Card -->
+  <div class="card">
+    <div class="card-body">
+
       <!-- Divider -->
       <hr>
 
-      <!-- Card -->
-      <div class="card">
-        <div class="card-body">
-
-          <!-- Divider -->
-          <hr>
-
-        </div>
-      </div>
     </div>
+  </div>
+  </div>
   </div>
 
   <div class="container">
