--- a/Week3-project/bowl.html
+++ b/Week3-project/bowl.html
@@ -35,7 +35,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="details.html">Plant bowl</a></li>
               <li><a class="dropdown-item" href="seed.html">Agricultural seeds</a></li>
-              <li><a class="dropdown-item" href="index.html">Home</a></li>
+              <li><a class="dropdown-item" href="index.html">Various indoor plants</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -49,7 +49,8 @@
         </ul>
       </div>
       <img src="img/1.jpg" alt="" style="width: 130px; height: 100px;">
-      <button type="button" class="btn " role="button"><a class="btn btn-success" href="login.html">Sign in</a></button>
+      <br>
+      <button  class="btn"><a class="btn btn-success" href="login.html">Sign in</button></a>
     </div>
   </nav>
   <!-- Card -->
