--- a/Week3-project/bowl.html
+++ b/Week3-project/bowl.html
@@ -74,6 +74,8 @@
 
             <a href="details.html"> <button type="button" id="Burlap" class="btn btn-outline-secondary">More..</button>
             </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+            </a>
           </div>
         </div>
       </div>
@@ -85,6 +87,8 @@
             <h5 class="card-title">Ceramic bowl</h5>
 
             <a href="details.html"> <button type="button" id="Ceramic" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
             </a>
           </div>
         </div>
@@ -99,6 +103,8 @@
 
             <a href="details.html"> <button type="button" id="Ceramic1"
                 class="btn btn-outline-secondary">More..</button> </a>
+                <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+                </a>
           </div>
         </div>
       </div>
@@ -111,6 +117,8 @@
             <h5 class="card-title">Bamboo bowl</h5>
 
             <a href="details.html"> <button type="button" id="Bambo" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
             </a>
           </div>
         </div>
