--- a/Week3-project/seed.html
+++ b/Week3-project/seed.html
@@ -79,6 +79,8 @@
 
             <a href="details.html"> <button type="button" id="Jac" class="btn btn-outline-secondary">More..</button>
             </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
+            </a>
           </div>
         </div>
       </div>
@@ -92,6 +94,8 @@
             <h5 class="card-title">Tecuma stans seeds</h5>
 
             <a href="details.html"> <button type="button" id="Tec" class="btn btn-outline-secondary">More..</button>
+            </a>
+            <a href="cart.html"> <button type="button" id="btn1" class="btn btn-outline-secondary">Add to Cart</button>
             </a>
           </div>
         </div>
